welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:9: error: illegal start of simple expression
    } return die1=1
    ^withoutDoubles:9: error: ';' expected but 'return' found.
    } return die1=1
      ^